# mgorilla_web

./: .env.docker  .gitignore  Dockerfile  Dockerfile.streamlit  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_userprofile_managers_alter_userprofile_email.py  0005_tag_rename_twitter_post_article_post_summary_and_more.py
appconfig/: asgi.py  settings.py  urls.py  wsgi.py
articles/: admin.py  managers.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_userprofile_managers_alter_userprofile_email.py  0005_tag_rename_twitter_post_article_post_summary_and_more.py
mgorilla_webapp/: asgi.py  settings.py  urls.py  wsgi.py
portfolio/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_portfoliopiece_created_at_and_more.py  0003_alter_portfoliopiece_thumbnail.py  0004_imageelement_textelement_videoelement.py  0005_portfoliomediaelement.py  0006_alter_imageelement_portfolio_piece.py  0007_imageelement_order.py  0008_imageelement_temp.py  0009_alter_imageelement_caption.py  0010_remove_imageelement_temp.py
static/: input.css  output.css
templates/: base.html  index.html
templates/account/: login.html  (+1 more)
uememparser/: apps.py  uememparser.py  urls.py  views.py
(+24 files in other folders)
