[tool.poetry]
name = "mgorilla_web"
version = "0.1.0"
description = ""
authors = ["motiongorilla <nize.afonya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
ruff = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
